--- a/Design/pom.xml
+++ b/Design/pom.xml
@@ -4,15 +4,14 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <artifactId>JavaDemo</artifactId>
+        <groupId>JavaDemo</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
     <groupId>design</groupId>
     <artifactId>design</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <dependencies>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
-    </dependencies>
 
 </project>
