--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,37 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>Algorithm</module>
+        <module>Annotion</module>
+        <module>Bit</module>
+        <module>Design</module>
+        <module>Java8</module>
+        <module>JavaRedis</module>
+        <module>MongoDB</module>
+        <module>NIO</module>
         <module>Runtime</module>
     </modules>
 
+    <dependencyManagement>
+    </dependencyManagement>
 
     <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.45</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
     </dependencies>
 
 </project>
